pagination book by category and target